# chezz

./: pyproject.toml
src/chezz/: __init__.py
src/chezz/game/: __init__.py
src/chezz/geo/: __init__.py  l2.py  v2.py
src/chezz/gr/: README.md  __init__.py  canvas.py
src/chezz/tl/: canvas.py
