[project]
name = "chezz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bpph", email = "operationbumdrive1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
chezz = "chezz:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
